--- a/tasks.org
+++ b/tasks.org
@@ -6,3 +6,18 @@ DEADLINE: <2021-09-11 Sat>
 ** TODO Continue editing this
 SCHEDULED: <2021-09-12 Sun>
 [[file:~/cs/emacs/emacs_from_scratch/dotfiles/init.el::(set-face-attribute 'org-block nil :foreground nil :inherit 'fixed-pitch)]]
+* Backlog
+** 
+* Work
+* Side project
+
+
+#+begin_src cpp
+
+#include <stdio.h>
+
+int main() {
+  std::cout << "This is a cpp code" << std::endl;
+}
+
+#+end_src
